# duckdb-quack

./: .gitmodules  CMakeLists.txt  Makefile  README.md  benchmark.py  dh.pem  extension_config.cmake  key.pem  macbook.tsv  plot.R  server.pem  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
benchmarks/: benchmark-batch.py  benchmark-transactions.py
docs/: usage.md
scripts/: test_concurrent.py
src/: CMakeLists.txt  catalog.cpp  client.cpp  http_rpc_server.cpp  https_rpc_server.cpp  message.cpp  quack-startstop.cpp  quack_catalog.cpp  quack_clear_cache.cpp  quack_client.cpp  quack_extension.cpp  quack_http_server.cpp  quack_insert.cpp  quack_log.cpp  quack_message.cpp  quack_scan.cpp  quack_server.cpp  quack_start_stop.cpp  quack_storage.cpp  quack_uri.cpp  rpc_extension.cpp  rpc_insert.cpp  rpc_log_type.cpp  rpc_scan_function.cpp  rpc_server.cpp  rpc_start_function.cpp  rpc_storage_extension.cpp  serialize_quack_message.cpp  server.cpp  ssl_key_generator.cpp  unixsocket_rpc_server.cpp
src/include/: catalog.hpp  client.hpp  message.hpp  quack_catalog.hpp  quack_client.hpp  quack_insert.hpp  quack_log.hpp  quack_message.hpp  quack_message.json  quack_scan.hpp  quack_server.hpp  quack_startstop.hpp  quack_storage.hpp  quack_uri.hpp  remote_extension.hpp  rpc_bind_data.hpp  rpc_extension.hpp  rpc_insert.hpp  rpc_log_type.hpp  rpc_scan_function.hpp  rpc_server.hpp  rpc_start_function.hpp  rpc_storage_extension.hpp  rpc_uri.hpp  server.hpp
src/storage/: CMakeLists.txt  quack_catalog.cpp  quack_catalog_set.cpp  quack_insert.cpp  quack_schema.cpp  quack_table.cpp  quack_transaction.cpp
test/sql/: attach.test  attach_ctas.test  attach_fetch_large.test_slow  attach_views.test  authn_swap.test  clear_cache.test  logging.test  lookup_overwrite.test  (+13 more)
(+7 files in other folders)
